# TACoBeLAL

./: .gitignore  Makefile  README.md  main.py  mcq_event_timeline_curated_51.jsonl  pyproject.toml
docs/: index.html
docs/data/: temporal_bundle.json
notebooks/: eda.ipynb  mcq_underperformance_debug.ipynb
results/mcq-order/: runs.csv
results/mcq-safety/mcq-order/: runs.csv
scripts/: export_temporal_docs_bundle.py
scripts/slurm/: eval_mcq_order_audioflamingo_a40.slurm  eval_mcq_order_audioflamingo_no_audio_1000_a40.slurm  eval_mcq_order_curated51_audioflamingo_a40.slurm  eval_mcq_order_curated51_llm_qwen_a40.slurm  eval_mcq_order_curated51_qwen2_audio_a40.slurm  eval_mcq_order_curated51_random_a40.slurm  eval_mcq_order_qwen2_5_omni_a40.slurm  eval_mcq_order_qwen2_audio_a40.slurm  eval_mcq_order_text_llm_a40.slurm  eval_mcq_order_voxtral_a40.slurm  eval_mcq_safety_a40.slurm  eval_mcq_synth_a40.slurm  eval_mcq_synth_pitch_order_trivial_a40.slurm  eval_mcq_synth_temporal_suite_a40.slurm  run_benchmark_a40.slurm
src/utils/: build_relation_mcq_dataset.py  build_safety_check_dataset.py  build_synthetic_mcq_dataset.py  build_timeline_mcq_dataset.py  debug_mcq_underperformance.py  download_dataset.py  evaluate_mcq_order.py  evaluate_mcq_order_audioflamingo.py  evaluate_mcq_order_qwen2_5_omni.py  evaluate_mcq_order_qwen2_audio.py  evaluate_mcq_order_voxtral.py  extract_audio_zip.py  mcq_order_models.py  review_mcq_order_labels.py  run_benchmark.py  setup_audioflamingo.py  synthetic_audio.py  wandb_tracker.py  zenodo.json
tests/: test_build_relation_mcq_dataset.py  test_build_safety_check_dataset.py  test_build_synthetic_mcq_dataset.py  test_build_timeline_mcq_dataset.py  test_download_dataset.py  test_evaluate_mcq_order.py  test_evaluate_mcq_order_audioflamingo.py  test_evaluate_mcq_order_qwen2_5_omni.py  test_evaluate_mcq_order_qwen2_audio.py  test_evaluate_mcq_order_voxtral.py  test_run_benchmark.py  test_wandb_tracker.py
wandb/: latest-run
wandb/run-20260210_105838-rh5fw4c1/: run-rh5fw4c1.wandb
wandb/run-20260210_110819-mz6c5ggk/: run-mz6c5ggk.wandb
wandb/run-20260210_111857-3uw1qk9w/: run-3uw1qk9w.wandb
wandb/run-20260210_113635-ef0ij60f/: run-ef0ij60f.wandb
(+266 files in other folders)
