[project]
name = "tacobelal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.0.0",
    "typer>=0.12.0",
    "certifi>=2024.0.0",
    "torch==2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
llm = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.0.0",
]
tracking = [
    "wandb>=0.17.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
