[project]
name = "tacobelal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.0.0",
    "typer>=0.12.0",
    "certifi>=2024.0.0",
    # Audio Flamingo 3 / PyTorch stack (subset of HF space requirements)
    "numpy==1.26.4",
    "torch==2.7.0",
    "torchvision",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "hydra-core",
    "Pillow",
    "pydub",
    "transformers==4.46.0",
    "pytorchvideo==0.1.5",
    "deepspeed==0.15.4",
    "accelerate==0.34.2",
    "opencv-python-headless==4.8.0.76",
    "matplotlib",
    "soundfile",
    "librosa",
    "openai-whisper",
    "ftfy",
    "ffmpeg",
    "jiwer",
    "einops",
    "kaldiio",
    "peft==0.14.0",
    "protobuf==3.20.*",
    # Triton wheels currently only exist up to Python 3.12; make it optional for 3.13+
    "triton==3.1.0; python_version < '3.13'",
    "gradio==5.49.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
llm = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.0.0",
    "sentencepiece>=0.2.0",
]
tracking = [
    "wandb>=0.17.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
